fix: replace deprecated key extend-ignore in ruff
extend-ignore has been deprecated in favor of ignore, see https://beta.ruff.rs/docs/settings/#extend-ignore

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,7 +88,8 @@ minversion = "6.0"
 extend-exclude = [
   "template",
 ]
-extend-ignore = [
+fix = true
+ignore = [
   "D203",
   "D204",
   "D213",
@@ -101,7 +102,6 @@ extend-ignore = [
   "D409",
   "D413",
 ]
-fix = true
 select = ["ALL"]
 src = ["src"]
 
