--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,63 +1,26 @@
+name: ci
+
+on:
+  pull_request:
+    types:
+      - opened
+      - synchronize
+  push:
+    branches:
+      - main
+
 concurrency:
   cancel-in-progress: true
   group: ${{ github.workflow }}-${{ github.ref }}
+
 jobs:
-  ci:
-    if: ${{ !cancelled() && ! failure() }}
-    needs: dependabot
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          cache: pip
-          python-version: ${{ matrix.python-version }}
-      - run: env | sort
-      - run: make dev
-      - run: make lint test docs build
-    strategy:
-      matrix:
-        python-version:
-          - '3.8'
-          - '3.9'
-          - '3.10'
-          - '3.11'
-  consistency:
-    if: ${{ !cancelled() && ! failure() }}
-    needs: dependabot
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Git
-        run: |
-          git config --global user.name github-actions
-          git config --global user.email github-actions@github.com
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          cache: pip
-          python-version: '3.11'
-      - run: env | sort
-      - name: Install copier for template rendering using pipx
-        run: pipx install copier
-      - name: Generate the project with the default value
-        run: |
-          find . -maxdepth 1 | grep -vE "(\.|template|includes|\.git|copier\.yaml)$" | xargs -I {} rm -r {}
-          copier copy -d repo_host_type=gitlab.com -r HEAD -f . .
-          rm .copier-answers.yml
-          copier copy -r HEAD -f . .
-          rm .copier-answers.yml
-      - run: git diff
-      - run: git status --porcelain
-      - run: test -z "$(git status --porcelain)"
+
   dependabot:
     if: ${{ github.actor == 'dependabot[bot]' }}
     permissions:
       contents: write
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
         with:
@@ -92,12 +55,57 @@ jobs:
             git commit -a -m "build: Update constraints for dependabot."
             git push
           fi
-name: CI
-on:
-  pull_request:
-    types:
-      - opened
-      - synchronize
-  push:
-    branches:
-      - main
+
+  ci:
+    if: ${{ !cancelled() && ! failure() }}
+    needs: dependabot
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version:
+          - '3.8'
+          - '3.9'
+          - '3.10'
+          - '3.11'
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          cache: pip
+          python-version: ${{ matrix.python-version }}
+      - run: env | sort
+      - run: make dev
+      - run: make lint test docs build
+
+  consistency:
+    if: ${{ !cancelled() && ! failure() }}
+    needs: dependabot
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Git
+        run: |
+          git config --global user.name github-actions
+          git config --global user.email github-actions@github.com
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          cache: pip
+          python-version: '3.11'
+      - run: env | sort
+      - name: Install copier for template rendering using pipx
+        run: pipx install copier
+      - name: Generate the project with the default value
+        run: |
+          find . -maxdepth 1 | grep -vE "(\.|template|includes|\.git|copier\.yaml)$" | xargs -I {} rm -r {}
+          copier copy -d repo_host_type=gitlab.com -r HEAD -f . .
+          rm .copier-answers.yml
+          copier copy -r HEAD -f . .
+          rm .copier-answers.yml
+      - run: git diff
+      - run: git status --porcelain
+      - run: test -z "$(git status --porcelain)"
