--- a/.github/workflows/lint-pull-request-title.yml
+++ b/.github/workflows/lint-pull-request-title.yml
@@ -1,18 +1,5 @@
-concurrency:
-  cancel-in-progress: true
-  group: ${{ github.workflow }}-${{ github.ref }}
-jobs:
-  lint-title:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check PR Title for Conventional Commit Format
-        run: |
-          if ! echo "${{ github.event.pull_request.title }}" | grep -Pq "^(build|chore|ci|docs|feat|fix|perf|refactor|revert|style|test)(\(\w+\))?!?:\s.*"; then
-            echo "The title does not conform to the Conventional Commit."
-            echo "Please refer to 'https://www.conventionalcommits.org/'"
-            exit 1
-          fi
-name: Lint pull request title
+name: lint pull request title
+
 on:
   pull_request:
     types:
@@ -20,3 +7,21 @@ on:
       - synchronize
       - reopened
       - edited
+
+concurrency:
+  cancel-in-progress: true
+  group: ${{ github.workflow }}-${{ github.ref }}
+
+jobs:
+  lint-title:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check PR Title for Conventional Commit Format
+        run: |
+          # Check if the PR title conforms to the Conventional Commit format
+          verify_pattern='^(build|chore|ci|docs|feat|fix|perf|refactor|revert|style|test)(\(\w+\))?!?:\s.*'
+          if ! echo "${{ github.event.pull_request.title }}" | grep -Pq "$verify_pattern"; then
+            echo "The title does not conform to the Conventional Commit."
+            echo "Please refer to 'https://www.conventionalcommits.org/'"
+            exit 1
+          fi
