--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,22 +1,11 @@
+name: release
+
+on:
+  release:
+    types: [published]
+
 jobs:
-  package:
-    needs: release
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          cache: pip
-          python-version: '3.11'
-      - run: env | sort
-      - run: make dev-package
-      - run: make build
-      - env:
-          TWINE_NON_INTERACTIVE: true
-          TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
-          TWINE_USERNAME: ${{ vars.TWINE_USERNAME }}
-        run: make upload
+
   pages-build:
     runs-on: ubuntu-latest
     steps:
@@ -40,16 +29,7 @@ jobs:
         uses: actions/upload-pages-artifact@v2
         with:
           path: public
-  pages-deploy:
-    needs: release
-    permissions:
-      id-token: write
-      pages: write
-    runs-on: ubuntu-latest
-    steps:
-      - id: deployment
-        name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v2
+
   release:
     needs: pages-build
     permissions:
@@ -73,9 +53,33 @@ jobs:
         with:
           body_path: release-notes.md
           prerelease: ${{ startsWith(github.ref, 'refs/tags/v0') }}
-name: Release
-on:
-  push:
-    tags:
-      - v[1-9][0-9]*.[0-9]+.[0-9]+
-      - v0.[0-9]+.[0-9]+
+
+  package:
+    needs: release
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          cache: pip
+          python-version: '3.11'
+      - run: env | sort
+      - run: make dev-package
+      - run: make build
+      - env:
+          TWINE_NON_INTERACTIVE: true
+          TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
+          TWINE_USERNAME: ${{ vars.TWINE_USERNAME }}
+        run: make upload
+
+  pages-deploy:
+    needs: release
+    permissions:
+      id-token: write
+      pages: write
+    runs-on: ubuntu-latest
+    steps:
+      - id: deployment
+        name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v2
