--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,14 +1,12 @@
 {
   "recommendations": [
     "DavidAnson.vscode-markdownlint",
-    "PascalReitermann93.vscode-yaml-sort",
     "charliermarsh.ruff",
+    "EditorConfig.EditorConfig",
     "ms-python.black-formatter",
     "ms-python.mypy-type-checker",
     "ms-python.python",
-    "richie5um2.vscode-sort-json",
     "shd101wyy.markdown-preview-enhanced",
     "streetsidesoftware.code-spell-checker",
-    "trond-snekvik.simple-rst"
   ]
 }
