chore: configure pre-commit and lint
- move pre-commit to lint requirement
- format pre-commit-config.yaml template
- make use fix mode instead of check mode
- format pyproject.toml template

--- a/.editorconfig
+++ b/.editorconfig
@@ -9,8 +9,5 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.{yml,yaml}]
+[*.{yml,yaml,json,toml,jinja}]
 indent_size = 2
-
-[*.{json,toml}]
-indent_size = 4
