--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,6 @@
     "ms-python.mypy-type-checker",
     "ms-python.python",
     "shd101wyy.markdown-preview-enhanced",
-    "streetsidesoftware.code-spell-checker",
+    "streetsidesoftware.code-spell-checker"
   ]
 }
