--- a/copier.yaml
+++ b/copier.yaml
@@ -108,6 +108,7 @@ coverage_threshold:
   help: 'Set the threshold for test coverage, ranging from 0 to 100:'
   type: int
   validator: '[% if not 0 <= coverage_threshold <= 100 %]Test Coverage threshold should be between 0 and 100[% endif %]'
+
 min_py:
   default: '3.8'
   choices:
@@ -151,6 +152,14 @@ default_py:
       validator: '[% from pathjoin("includes", "version_compare.jinja") import version_between_validator %]{{ version_between_validator("3.11", min_py, max_py) }}'
       value: '3.11'
   help: 'Choose the default Python version for development, documentation generation, and package build:'
+  type: str
+
+docs_type:
+  default: 'sphinx'
+  choices:
+    Sphinx: sphinx
+    MkDocs: mkdocs
+  help: 'Choose the type of documentation to generate:'
   type: str
 
 copyright_license:
