--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,10 @@ force-exclude = '''
 '''
 
 [tool.coverage.report]
+exclude_lines = [
+  'if typing.TYPE_CHECKING:',
+  'pragma: no cover',
+]
 fail_under = 100
 
 [tool.coverage.run]
