--- a/template/.editorconfig
+++ b/template/.editorconfig
@@ -3,11 +3,17 @@
 root = true
 
 [*]
-indent_style = space
 end_of_line = lf
 charset = utf-8
-trim_trailing_whitespace = true
+indent_style = space
 insert_final_newline = true
+trim_trailing_whitespace = true
 
-[*.{yml,yaml,json,toml,jinja}]
+[*.py]
+indent_size = 4
+
+[*.{yml,yaml,json,toml,jinja,css}]
 indent_size = 2
+
+[Makefile]
+indent_style = tab
